force-app/main/default/objects/kzScoringValue__c/kzScoringValue__c.object-meta.xml
<CustomObject>
    <description>Valores (posibles respuestas) por Item con puntaje asignado. Soporta N registros por Item.</description>
    <label>Scoring Value</label>
    <nameField>
        <label>Nombre</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Scoring Values</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>