force-app/main/default/objects/kzScoringValue__c/fields/kzActive__c.field-meta.xml
<CustomField>
    <fullName>kzActive__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Activo</label>
    <type>Checkbox</type>
</CustomField>