force-app/main/default/objects/kzScoringValue__c/fields/kzAwardedScore__c.field-meta.xml
<CustomField>
    <fullName>kzAwardedScore__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Puntos que suma este valor al PO cuando coincide.</inlineHelpText>
    <label>Puntaje Otorgado</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>