force-app/main/default/objects/kzScoringValue__c/fields/kzExactMatch__c.field-meta.xml
<CustomField>
    <fullName>kzExactMatch__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Sólo aplica si Item.FieldType = TEXT; si marca true se usará equals (case-insensitive), si false se usará contains.</inlineHelpText>
    <label>Coincidencia Exacta</label>
    <type>Checkbox</type>
</CustomField>