force-app/main/default/objects/kzScoringValue__c/fields/kzItemScoring__c.field-meta.xml
<CustomField>
    <fullName>kzItemScoring__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Referencia al Item al que corresponde este valor.</inlineHelpText>
    <label>Item Scoring</label>
    <referenceTo>kzItemScoring__c</referenceTo>
    <relationshipLabel>Scoring Values</relationshipLabel>
    <relationshipName>Scoring_Values</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>