force-app/main/default/objects/kzScoringValue__c/fields/kzOrder__c.field-meta.xml
<CustomField>
    <fullName>kzOrder__c</fullName>
    <inlineHelpText>Orden de evaluación/visualización.</inlineHelpText>
    <label>Orden</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>