force-app/main/default/objects/kzScoringValue__c/fields/kzPicklistOptionApi__c.field-meta.xml
<CustomField>
    <fullName>kzPicklistOptionApi__c</fullName>
    <inlineHelpText>(opcional) Guardar el value de picklist si se usa mapping by API value.</inlineHelpText>
    <label>Picklist Option API Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>