force-app/main/default/objects/kzScoringValue__c/fields/kzValueText__c.field-meta.xml
<CustomField>
    <fullName>kzValueText__c</fullName>
    <inlineHelpText>Texto o label que se comparará con el valor del Lead. Para picklist, use el Label o Value según mapeo.</inlineHelpText>
    <label>Value / Texto de Comparación</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>